# TimerApp-LedBlink

./: .gitignore  CMakeLists.txt  common.h  main.c  makefile  readme.md  rpi-toolchain.cmake
LedSimulation/: LedSimulation.c  LedSimulation.h
appTimer/: appTimer.c  appTimer.h
build_arm_config/: CMakeLists.txt
build_x86_config/: CMakeLists.txt
gpiodTools/: gpiodTools.c  gpiodTools.h
gpiodWrapper/: gpiodWrapper.c  gpiodWrapper.h
